2012-11-08  Robert Kroeger  <rjkroege@chromium.org>

        [chromium] correct coding oversight for clang
        https://bugs.webkit.org/show_bug.cgi?id=101513

        Reviewed by Kent Tamura.

        https://bugs.webkit.org/show_bug.cgi?id=100675 contains an
        incorrect declaration that precludes compiling embedder code
        with clang: patch changes class to struct appropriately.

        * chromium/public/WebGestureCurveTarget.h:
        (WebKit):

2012-11-07  Yusuf Ozuysal  <yusufo@google.com>

        Add API for touchEventHandlerRegion to WebLayer
        https://bugs.webkit.org/show_bug.cgi?id=101406

        Reviewed by James Robinson.

        These will be used to keep track of JavaScript touch event handlers from the compositor thread.

        * chromium/public/WebLayer.h:
        (WebKit::WebLayer::setTouchEventHandlerRegion):
        (WebKit::WebLayer::touchEventHandlerRegion):
        (WebLayer):

2012-10-23  Stephen White  <senorblanco@chromium.org>

        [skia] Implement reference (url) filters on composited layers.
        https://bugs.webkit.org/show_bug.cgi?id=100142

        Reviewed by James Robinson.

        * chromium/public/WebLayer.h:
        Expose Layer::setFilter() to the WebKit API.

2012-11-05  James Robinson  <jamesr@chromium.org>

        [chromium] Use const SkBitmap& parameter for WebLayerTreeView::setFontAtlas
        https://bugs.webkit.org/show_bug.cgi?id=101016

        Reviewed by Adrienne Walker.

        Passing SkBitmap by value requires including SkBitmap.h, which is tricky for some clients to do since it
        requires having the rest of skia's headers on the include path and setting up the correct config to set
        preprocessor defines.  Also shuffles the parameter order around to make rolling easier since you can't override
        just by const ref-ness.

        * chromium/public/WebLayerTreeView.h:
        (WebKit::WebLayerTreeView::setFontAtlas):
