@@ -1,3 +1,12 @@
+2012-11-08  Keishi Hattori  <keishi@webkit.org>
+
+        Add properties for week/month picker in DateTimeChooserImpl::writeDocument
+        https://bugs.webkit.org/show_bug.cgi?id=101552
+
+        Reviewed by Kent Tamura.
+
+        * chromium/public/WebLocalizedString.h: Add WeekNumberLabel.
+
 2012-11-08  Robert Kroeger  <rjkroege@chromium.org>
 
         [chromium] correct coding oversight for clang
